add more rewrite conditions

--- a/backend/.htaccess
+++ b/backend/.htaccess
@@ -1,12 +1,21 @@
 # Apache 2.4 configuration file for eLearning 1.6
 
+# Begin
+<IfModule mod_rewrite.c>
 # Options
 Options All -Indexes
 Options -MultiViews
 
 # RewriteEngine
 RewriteEngine On
+RewriteBase /
 RewriteRule . index.php
+
+# Conditions/Rules
+RewriteCond %{REQUEST_METHOD} (.+)
+
+</IfModule>
+# End
 
 # Enviroment variables
 SetEnv DB_HOST localhost
