--- a/old_frontend/.gitignore
+++ b/old_frontend/.gitignore
@@ -25,3 +25,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# next.js
+/.next/
+/out/
+*.pem
+# debug
+# local env files
+# vercel
+.vercel
