--- a/old_frontend/package.json
+++ b/old_frontend/package.json
@@ -3,10 +3,11 @@
   "version": "5.0.0",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "start": "next dev",
+    "start-production": "next start",
+    "build": "next build",
+    "test": "jest test"
   },
   "dependencies": {
     "@emotion/react": "latest",
@@ -14,15 +15,16 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "latest",
     "axios": "^1.3.4",
+    "error": "10.4.0",
     "http-proxy-middleware": "^2.0.6",
     "i18next": "^22.4.10",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.1.1",
-    "react": "latest",
-    "react-dom": "latest",
+    "next": "^13.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "latest"
+    "react-router-dom": "^6.8.2"
   },
   "browserslist": {
     "production": [
