--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "framer-motion": "^10.12.10",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
+    "next-seo": "^6.0.0",
     "react": "18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0"
   },
