--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
-NEXT_APP_API_HOST="http://localhost"
+NEXT_APP_API_HOST=http://localhost
+NEXTAUTH_SECRET=6f6c6c6568616d5f6b6579
+NEXTAUTH_URL=http://localhost:3000
