remove secret variables and maintain as a template

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
-NEXT_APP_API_HOST=http://localhost
-NEXTAUTH_SECRET=6f6c6c6568616d5f6b6579
-NEXTAUTH_URL=http://localhost:3000
+NEXT_APP_API_HOST=
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=
+NEXT_APP_GOOGLE_CLIENT_ID=
+NEXT_APP_GOOGLE_CLIENT_SECRET=
