--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@ajna/pagination": "^1.4.19",
     "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/next-js": "^2.1.3",
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.10",
     "next": "13.4.2",
