--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,12 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
+    "cloudinary": "^1.37.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
-    "formidable": "^2.1.1",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.10",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
     "next-seo": "^6.0.0",
