--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "next-auth": "^4.22.1",
     "next-seo": "^6.0.0",
     "react": "18.2.0",
+    "react-avatar-editor": "^13.0.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
