--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-avatar-editor": "^13.0.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
