--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.4.0",
     "cloudinary": "^1.37.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "formik": "^2.2.9",
