--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-device-detect": "^2.2.3",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-player": "^2.12.0",
     "yup": "^1.1.1"
   },
   "devDependencies": {
