--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-table": "^8.9.1",
     "axios": "^1.4.0",
     "cloudinary": "^1.37.0",
     "date-fns": "^2.30.0",
