--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "eslint-config-next": "13.4.2",
     "formik": "^2.2.9",
     "framer-motion": "^10.12.10",
-    "multer": "^1.4.5-lts.1",
+    "multer": ">=2.0.0"
     "next": "14.2.25",
     "next-auth": "^4.22.1",
     "next-seo": "^6.0.0",
